<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProjectsActivity">

    <Button
            android:text="@string/p1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2" app:layout_constraintEnd_toStartOf="@+id/button3" android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginBottom="100dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="90dp" android:layout_marginStart="90dp" android:onClick="onClick_Lab2"
            app:layout_constraintVertical_bias="1.0"/>
    <Button
            android:text="@string/p2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="90dp" android:layout_marginRight="90dp"
            app:layout_constraintStart_toEndOf="@+id/button2" android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp" android:layout_marginTop="152dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:onClick="onClick_Lab3"/>
    <TextView
            android:text="@string/desPro"
            android:layout_width="264dp"
            android:layout_height="59dp"
            android:id="@+id/textView3" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="184dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="49dp"
            android:layout_marginRight="49dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="60dp" android:layout_marginStart="60dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="120dp"
            app:layout_constraintBottom_toTopOf="@+id/button2"/>

</android.support.constraint.ConstraintLayout>