<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InicioActivity">

    <ImageView
            android:layout_width="305dp"
            android:layout_height="226dp" app:srcCompat="@drawable/pfoto"
            android:id="@+id/imageView2" android:layout_marginEnd="39dp" android:layout_marginRight="39dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="251dp" android:layout_marginTop="90dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="40dp" android:layout_marginStart="40dp" android:contentDescription="@string/p_photo"/>
    <TextView
            android:text="@string/yo"
            android:layout_width="232dp"
            android:layout_height="36dp"
            android:id="@+id/textView2"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="145dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="116dp"
            android:layout_marginStart="116dp" android:layout_marginTop="70dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="64dp" android:layout_marginRight="64dp" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0" app:fontFamily="serif-monospace"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="147dp"
            android:layout_marginStart="147dp" android:layout_marginBottom="53dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="149dp" android:layout_marginRight="149dp" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:text="@string/menu_btn"
            android:onClick="onClick_Back"/>
</android.support.constraint.ConstraintLayout>